# droidian-encryption-service

./: .gitignore  AUTHORS  README.md  meson.build
data/: droidian-encryption-service.conf  meson.build  org.droidian.EncryptionService.policy
debian/: control  copyright  droidian-encryption-service.initramfs-hook  rules
src/: config.c  config.h  dbus.c  dbus.h  droidian-encryption-service.c  encryption.c  encryption.h  meson.build
src/dbus/: meson.build  org.droidian.EncryptionService.Encryption.xml  org.droidian.EncryptionService.conf  org.droidian.EncryptionService.service
src/droidian-encryption-helper/: droidian-encryption-helper-shutdown.sh  droidian-encryption-helper.c  meson.build
systemd/: droidian-encryption-helper-shutdown.service  droidian-encryption-service.service  meson.build
